k8s/jobs/service_with_ingress_nginx_custom_authenticate/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # ingress will scan it
spec:
  rules:
  - http:
      paths:
      - path: /sub-path/
        backend:
          serviceName: http-app-service
          servicePort: 5678
